revision-derive/tests/compile_fail/optimised_legacy_extras.stderr
error: type-level `map = "indexed"` is not supported; use the per-field attribute `#[revision(indexed_map)]` on each map-shaped field that should use indexed encoding instead
 --> tests/compile_fail/optimised_legacy_extras.rs:5:32
  |
5 | #[revisioned(revision(1, map = "indexed"))]
  |                                ^^^^^^^^^
